<resources>
    <string name="app_name">Coop-Picker</string>
    <string name="app_author">Jean Mattes</string>
    <string name="app_description">This app is made by Jean Mattes (risingcode.net);\n
        Any legal stuff belongs to their respective owners.\n\n
        ©1998&#8211;2020 Blizzard Entertainment, Inc. All rights reserved. StarCraft and Blizzard Entertainment are trademarks or registered trademarks of Blizzard Entertainment, Inc. in the U.S. and/or other countries.
    </string>
    <string name="app_logo">favicon of risingcode.net (R in a mirrored C)</string>
    <string name="action_risingcode">risingcode.net</string>
    <string name="action_debug">Debug</string>
    <string name="action_chose">Choose Commander</string>
    <string name="action_reset">Reset Commander</string>
    <string name="action_about">About</string>
    <string name="about_close">Close</string>
    <string name="content_description_ic_launcher">Blue word "Coop" on black background</string>
    <string name="cdr_0">Raynor</string>
    <string name="cdr_1">Kerrigan</string>
    <string name="cdr_2">Artanis</string>
    <string name="cdr_3">Swann</string>
    <string name="cdr_4">Zagara</string>
    <string name="cdr_5">Vorazun</string>
    <string name="cdr_6">Karax</string>
    <string name="cdr_7">Abathur</string>
    <string name="cdr_8">Alarak</string>
    <string name="cdr_9">Nova</string>
    <string name="cdr_10">Stukov</string>
    <string name="cdr_11">Fenix</string>
    <string name="cdr_12">Dehaka</string>
    <string name="cdr_13">Han/Horner</string>
    <string name="cdr_14">Tychus</string>
    <string name="cdr_15">Zeratul</string>
    <string name="cdr_16">Stetmann</string>
    <string name="cdr_17">Mengsk</string>
    <string name="btn_random_description">Randomly choses Commander</string>
    <string name="btn_reset_description">Resets chosen Commanders</string>
    <string name="btn_about_description">Shows About dialog</string>
    <string name="error_no_selection">Choose at\nleast one!</string>
    <string name="error_init">something went wrong! %d</string>
</resources>
